--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,12 +18,14 @@ spring:
     timeout: 2592000
   # 数据库配置
   datasource:
+    # todo 需替换配置
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/teaai
     username: root
     password: 123456
   # Redis 配置
   redis:
+    # todo 需替换配置
     database: 1
     host: localhost
     port: 6379
