--- a/.gitignore
+++ b/.gitignore
@@ -142,5 +142,5 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-# API keys
-apiKeyConstant.java
+# AI 配置文件
+AiConfig.java
